slurm_output_8834237.out
============================================================================================== 
Warning! Mixing Conda and module environments may lead to corruption of the
user environment. 
We do not recommend users mixing those two environments unless absolutely
necessary. Note that 
SURF does not provide any support for Conda environment.
For more information, please refer to our software policy page:
https://servicedesk.surf.nl/wiki/display/WIKI/Software+policy+Snellius#SoftwarepolicySnellius-UseofAnacondaandMinicondaenvironmentsonSnellius 

Remember that many packages have already been installed on the system and can
be loaded using 
the 'module load <package__name>' command. If you are uncertain if a package is
already available 
on the system, please use 'module avail' or 'module spider' to search for it.
============================================================================================== 
Traceback (most recent call last):
  File "/gpfs/home6/scur2773/uvadlc_practicals_2024/assignment2/part2/train.py", line 13, in <module>
    from gpt import GPT
  File "/gpfs/home6/scur2773/uvadlc_practicals_2024/assignment2/part2/gpt.py", line 533
    print("Warning: NaN or Inf found in probabilities here")
    ^
IndentationError: expected an indented block after 'if' statement on line 532
srun: error: gcn58: task 0: Exited with exit code 1
srun: Terminating StepId=8834237.0

JOB STATISTICS
==============
Job ID: 8834237
Cluster: snellius
User/Group: scur2773/scur2773
State: FAILED (exit code 1)
Nodes: 1
Cores per node: 18
CPU Utilized: 00:00:05
CPU Efficiency: 1.74% of 00:04:48 core-walltime
Job Wall-clock time: 00:00:16
Memory Utilized: 2.28 MB
Memory Efficiency: 0.00% of 120.00 GB
